001-03-31  David O'Brien  <obrien@FreeBSD.org>

	* ld-selective/selective.exp: Use -O with gcc rather than -O2.
	This optimization level is buggy on some platforms, and this test
	is not intended to test compiler optimizations.

2001-03-18  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* ld-selective/selective.exp: Don't run test for 68hc11 and 68hc12
	because selective linking is not yet implemented.

2001-02-08  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* ld-srec/srec.exp (run_srec_test): m6811 code has references
	to soft registers, define them with --defsym.
	* ld-selective/selective.exp: Likewise.

2001-01-14  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-sh/sh.exp: Use --oformat srec, not -oformat srec.

2001-01-03  Philip Blundell  <pb@futuretv.com>

	* ld-elfvsb/elfvsb.exp: Run test on Linux/Alpha.
	* ld-shared/shared.exp: Likewise.

2001-01-01  Philip Blundell  <philb@gnu.org>

	* ld-undefined/weak-undef.exp: New test.
	* ld-undefined/weak-undef.s, ld-undefined/weak-undef.t: Supporting
	files for above.

	* ld-elfvers/vers.exp: Run test on Linux/ARM.
	* ld-elfvsb/elfvsb.exp: Likewise.
	* ld-shared/shared.exp: Likewise.

2000-12-31  Nick Clifton  <nickc@redhat.com>

	* ld-srec/srec.exp: Use --oformat instead of -oformat.

2000-12-09  Nick Clifton  <nickc@redhat.com>

	* ld-selective/selective.exp: Link in libgcc when target is v850.

	* ld-srec/srec.exp: Expect the srec_test to fail for ARM targets
	because the -oformat linker command switch cannot be used.

2000-11-06  Alan Modra  <alan@linuxcare.com.au>

	* ld-elfvsb/main.c (PROTECTED_CHECK): Include stdio.h.
	(main): Prune unused args.

2000-10-29  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-selective/selective.exp <no CXX>: Fix typo for argument to
	"untested".

2000-10-19  H.J. Lu  (hjl@gnu.org)

	* ld-elfvsb/elfvsb.exp (visibility_run): Set expected failures
	for Linux/PPC.
	* ld-shared/shared.exp: Likewise.

2000-10-09  Hans-Peter Nilsson  <hp@bitrange.com>
