@@ -126,6 +126,7 @@ set ml "undefined.c:9: undefined reference to `this_function_is_not_defined'"
 # hence the xfails below.
 
 #setup_xfail arm-*-elf
+setup_xfail i?86-*-freebsd*
 #setup_xfail strongarm-*-elf
 #setup_xfail thumb-*-elf
 setup_xfail mcore-*-elf
