@@ -1,4 +1,13 @@
-001-03-31  David O'Brien  <obrien@FreeBSD.org>
+2001-04-01  David O'Brien  <obrien@FreeBSD.org>
+
+	* ld-bootstrap/bootstrap.exp: FreeBSD 4.3+ will fail on the --static test
+	as the static ELF binary needs to have its EI_OSABI set to a supported
+	value.  There is no longer a fallback interpretation due to a security
+	issue.
+	* ld-undefined/undefined.exp: XFAIL on FreeBSD/i386 for the usual (even
+	though it doesn't use DWARF2 yet (but its output is identical).
+
+2001-04-01  David O'Brien  <obrien@FreeBSD.org>
 
 	* ld-selective/selective.exp: Use -O with gcc rather than -O2.
 	This optimization level is buggy on some platforms, and this test
